--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="container-fluid bg-white">
             <div class="d-flex align-items-center">
                 <!-- LOGO -->
-                <div class="my-leftBox">
-                    <!-- <img class="img-fluid" src="./img/logo.svg" alt="logo"> -->
-                    <img class="w-auto h-100 py-2" src="./img/mobile-logo.png" alt="logo">
+                <div class="my-leftBox d-flex">
+                    <img class="img-fluid pe-3 d-none d-md-block" src="./img/logo.svg" alt="logo">
+                    <img class="w-auto h-100 py-2 d-md-none" src="./img/mobile-logo.png" alt="logo">
                 </div>
 
                 <!-- SEARCHBAR -->
@@ -38,8 +38,8 @@
 
                 <!-- NAVBAR -->
                 <nav class="my-rightBox d-flex">
-                    <!-- collapse icons -->
-                    <!-- <div class="col-9 d-flex">
+                    <!-- responsive visibility icons -->
+                    <div class="col-9 d-none d-md-flex ps-2">
                         <div class="flex-fill text-center">
                             <i class="fa-solid fa-list-ul"></i>
                         </div>
@@ -49,11 +49,11 @@
                         <div class="flex-fill text-center">
                             <i class="fa-solid fa-ellipsis-vertical"></i>
                         </div>
-                    </div> -->
+                    </div>
 
 
                     <div class="col-12 col-md-3 text-center">
-                        <i class="fa-solid fa-bell"></i>
+                        <i class="fa-solid fa-bell text-warning"></i>
                     </div>
                 </nav>
             </div>
