--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
         </div>
     </header>
 
+    <main>
+        <!-- SIDEBAR -->
+        <div class="my-leftBox text-white text-center d-flex flex-column justify-content-between py-4">
+            <div class="d-flex flex-column gap-3">
+                <i class="fa-solid fa-house"></i>
+                <i class="fa-solid fa-chart-column"></i>
+                <i class="fa-solid fa-signal"></i>
+            </div>
+
+            <div>
+                <i class="fa-solid fa-gear"></i>
+            </div>
+        </div>
+
+        <!-- MAIN CONTENT -->
+        <div class="my-rightBox">
+
+        </div>
+    </main>
 
 
     <!-- BS JS IMPORT -->
