--- a/index.html
+++ b/index.html
@@ -63,14 +63,28 @@
     <main>
         <!-- SIDEBAR -->
         <div class="my-leftBox text-white text-center d-flex flex-column justify-content-between py-4">
-            <div class="d-flex flex-column gap-3">
-                <i class="fa-solid fa-house"></i>
-                <i class="fa-solid fa-chart-column"></i>
-                <i class="fa-solid fa-signal"></i>
+            <!-- TOP -->
+            <div class="d-flex flex-column gap-3 align-items-start mx-auto">
+                <a class="text-white text-decoration-none" href="#">
+                    <i class="fa-solid fa-house"></i>
+                    <span class="ms-2 d-none d-md-inline-block">Home</span>
+                </a>
+                <a class="text-white text-decoration-none" href="#">
+                    <i class="fa-solid fa-chart-column"></i>
+                    <span class="ms-2 d-none d-md-inline-block">Stats</span>
+                </a>
+                <a class="text-white text-decoration-none" href="#">
+                    <i class="fa-solid fa-signal"></i>
+                    <span class="ms-2 d-none d-md-inline-block">Signals</span>
+                </a>
             </div>
 
+            <!-- BOTTOM -->
             <div>
-                <i class="fa-solid fa-gear"></i>
+                <a class="text-white text-decoration-none" href="#">
+                    <i class="fa-solid fa-gear"></i>
+                    <span class="ms-2 d-none d-md-inline-block">Admin</span>
+                </a>
             </div>
         </div>
 
