main: responsive headerMain

--- a/index.html
+++ b/index.html
@@ -94,28 +94,31 @@
                 <!-- TOP BAR -->
                 <div class="my-topBox container-fluid">
                     <div class="row text-white py-3 g-4">
-                        <div class="col-12 d-flex">
-                            <a class="text-white text-decoration-none" href="#">
+                        <div class="col-12 col-md-4 col-xl-2 d-flex order-md-last justify-content-md-end">
+                            <a class="text-white text-decoration-none text-nowrap" href="#">
                                 Nuovo Studente
                                 <i class="fa-solid fa-plus p-2 ms-2 border rounded"></i>
                             </a>   
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 col-md-4 col-xl-5">
                             <div class="d-flex align-items-baseline">
-                                <h1 class="m-0">Boolean</h1>
+                                <h1 class="m-0 h3">Boolean</h1>
                                 <span class="badge rounded-pill my-bgBlue ms-2">Piano blaze</span>
                             </div>
                             <div>
                                 <span class="badge rounded-pill my-bgBlue">3 app</span>
                                 <i class="fa-solid fa-angles-right m-1"></i>
-                                <span class="badge rounded-pill my-bgBlue">
+                                <span class="badge rounded-pill my-bgBlue d-inline-block d-xl-none">
                                     <i class="fa-solid fa-plus"></i>
                                 </span>
+                                <span class="badge rounded-pill my-bgBlue d-none d-xl-inline-block">Boolean mobile app</span>
+                                <span class="badge rounded-pill my-bgBlue d-none d-xl-inline-block">Boolean web app</span>
+                                <span class="badge rounded-pill my-bgBlue d-none d-xl-inline-block">Boolean blog app</span>
                             </div>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 col-md-4 col-xl-5">
                             <p class="m-0">Studenti online negli ultimi 30 minuti</p>
-                            <p class="h1">125</p>
+                            <p class="h3">125</p>
                         </div>
                     </div>
                 </div>
