--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="col-12 col-md-4 col-xl-2 d-flex order-md-last justify-content-md-end">
                             <a class="text-white text-decoration-none text-nowrap" href="#">
                                 Nuovo Studente
-                                <i class="fa-solid fa-plus p-2 ms-2 border rounded"></i>
+                                <button class="btn btn-outline-light ms-3"><i class="fa-solid fa-plus"></i></button>
                             </a>   
                         </div>
                         <div class="col-12 col-md-4 col-xl-5">
@@ -119,6 +119,233 @@
                         <div class="col-12 col-md-4 col-xl-5">
                             <p class="m-0">Studenti online negli ultimi 30 minuti</p>
                             <p class="h3">125</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CONTENT -->
+                <div class="container-fluid">
+                    <div class="row py-4">
+                        <!-- LEFT MACRO COLUMN -->
+                        <div class="col-12 col-md-8">
+                            <!-- CARD TABLE -->
+                            <div>
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        <strong>Prossime classi</strong> 
+                                    </div>
+                                    <table class="table">
+                                        <thead>
+                                            <tr class="text-center">
+                                                <th class="text-start col-xxl-7 col-xl-6" scope="col">Nome</th>
+                                                <th class="d-none d-sm-table-cell" scope="col">Data inizio</th>
+                                                <th class="d-none d-sm-table-cell" scope="col">ROI</th>
+                                                <th scope="col">Stato</th>
+                                                <th scope="col">Azioni</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="text-center">
+                                                <td class="text-start">
+                                                    <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    Classe 75
+                                                </td>
+                                                <td class="d-none d-sm-table-cell">15 Feb 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="text-center">
+                                                <td class="text-start">
+                                                    <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    Classe 76
+                                                </td>
+                                                <td class="d-none d-sm-table-cell">16 Feb 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="text-center">
+                                                <td class="text-start">
+                                                    <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    Classe 77
+                                                </td>
+                                                <td class="d-none d-sm-table-cell">17 Feb 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>
+                                                    <span class="badge text-bg-warning text-white">Process</span>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="text-center">
+                                                <td class="text-start">
+                                                    <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    Classe 78
+                                                </td>
+                                                <td class="d-none d-sm-table-cell">18 Feb 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="text-center">
+                                                <td class="text-start">
+                                                    <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    Classe 79
+                                                </td>
+                                                <td class="d-none d-sm-table-cell">19 Feb 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>
+                                                    <span class="badge text-bg-danger">Failed</span>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="text-center">
+                                                <td class="text-start">
+                                                    <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    Classe 80
+                                                </td>
+                                                <td class="d-none d-sm-table-cell">20 Feb 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="text-center">
+                                                <td class="text-start">
+                                                    <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    Classe 81
+                                                </td>
+                                                <td class="d-none d-sm-table-cell">21 Feb 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>
+                                                    <span class="badge text-bg-danger">Failed</span>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                            <tr class="text-center">
+                                                <td class="text-start">
+                                                    <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    Classe 82
+                                                </td>
+                                                <td class="d-none d-sm-table-cell">22 Feb 2021</td>
+                                                <td class="d-none d-sm-table-cell">20%</td>
+                                                <td>
+                                                    <span class="badge text-bg-success">Done</span>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-pencil"></i>
+                                                    </button>
+                                                    <button class="btn btn-outline-secondary">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <!-- CARD FAQ -->
+                            <div>
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        Featured
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Cras justo odio</li>
+                                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                                        <li class="list-group-item">Vestibulum at eros</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- RIGHT MACRO COLUMN -->
+                        <div class="col-12 col-md-4">
+                            <!-- CARD TODO -->
+                            <div>
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        Featured
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Cras justo odio</li>
+                                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                                        <li class="list-group-item">Vestibulum at eros</li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <!-- CARD GRAPH -->
+                            <div>
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        Featured
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Cras justo odio</li>
+                                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                                        <li class="list-group-item">Vestibulum at eros</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
