--- a/index.html
+++ b/index.html
@@ -306,13 +306,49 @@
                             <div>
                                 <div class="card mb-4">
                                     <div class="card-header">
-                                        Featured
+                                        <strong>F.A.Q.</strong>
                                     </div>
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">Cras justo odio</li>
-                                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                                        <li class="list-group-item">Vestibulum at eros</li>
-                                    </ul>
+                                    <div class="accordion" id="accordionExample">
+                                        <div class="accordion-item">
+                                            <h2 class="accordion-header">
+                                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                                                    aria-expanded="true" aria-controls="collapseOne">
+                                                    Come aggiungere un nuovo studente?
+                                                </button>
+                                            </h2>
+                                            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam perspiciatis iusto, tempore, minima impedit velit neque magnam sint fugit culpa doloribus qui corporis. Ullam, fugit dolores totam voluptatem at aut.
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="accordion-item">
+                                            <h2 class="accordion-header">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                    Come posso accedere alle informazioni del mio account?
+                                                </button>
+                                            </h2>
+                                            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe vel voluptates earum? Debitis hic, expedita iusto nisi vero saepe laudantium amet aspernatur reiciendis, tempora nemo sint quod doloremque quisquam cumque.
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="accordion-item">
+                                            <h2 class="accordion-header">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                    Posso usare questa dashboard da mobile?
+                                                </button>
+                                            </h2>
+                                            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos quaerat veritatis doloremque adipisci consequatur illum fugiat odio, cupiditate officiis, quas aut tempora porro dolore amet ipsam maiores cum consectetur debitis!
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
