main: todo list

--- a/index.html
+++ b/index.html
@@ -359,13 +359,30 @@
                             <div>
                                 <div class="card mb-4">
                                     <div class="card-header">
-                                        Featured
+                                        <strong>Todo</strong>
                                     </div>
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">Cras justo odio</li>
-                                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                                        <li class="list-group-item">Vestibulum at eros</li>
-                                    </ul>
+                                    <div class="card m-3">
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item d-flex">
+                                                <input class="form-check-input col-1" type="checkbox" value="" id="flexCheckDefault">
+                                                <label class="form-check-label ms-2" for="flexCheckDefault">
+                                                    Kickoff nuove classi
+                                                </label>
+                                            </li>
+                                            <li class="list-group-item d-flex">
+                                                <input class="form-check-input col-1" type="checkbox" value="" id="flexCheckDefault">
+                                                <label class="form-check-label ms-2" for="flexCheckDefault">
+                                                    Lezione su Bootstrap 5 in classe #75
+                                                </label>
+                                            </li>
+                                            <li class="list-group-item d-flex">
+                                                <input class="form-check-input col-1" type="checkbox" value="" id="flexCheckDefault">
+                                                <label class="form-check-label ms-2" for="flexCheckDefault">
+                                                    Controllare username github studenti
+                                                </label>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
 
