--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         rel="stylesheet">
 </head>
 
-<body class="debug">
+<body>
     <header>
         <div class="container-fluid bg-white">
             <div class="d-flex align-items-center">
