style: change "fileInput" style

--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
                                     <option value="rus">Russia</option>
                                     <option value="kor">Corea del Sud</option>
                                     <option value="fra">Francia</option>
+                                    <option value="fra">Italia</option>
                                 </select>
                             </div>
                             <div class="mb-3 col-2">
@@ -504,18 +505,16 @@
                             </div>
 
                             <!-- FOTO -->
-                            <div class="mb-3 col-12">
-                                <label for="customFile" class="form-label">Foto</label>
-                                <div class="my-customFile mb-3 rounded">
-                                    <input type="file" id="customFile" name="filename">
-                                </div>
+                            <div class="mb-3">
+                                <label for="inputFile" class="form-label">Foto</label>
+                                <input class="form-control" type="file" id="inputFile">
                             </div>
 
 
                             <!-- LAST CHOICES -->
                             <div>
                                 <div class="form-check py-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1" required>
                                     <label class="form-check-label" for="defaultCheck1">
                                         Seleziona per proseguire
                                     </label>
