some form fixes

--- a/index.html
+++ b/index.html
@@ -458,11 +458,9 @@
                             <!-- EMAIL -->
                             <div class="mb-3 col-6">
                                 <label for="inputEmail" class="form-label">Email</label>
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text" id="basic-addon1">@</span>
-                                    </div>
-                                    <input type="email" class="form-control" id="inputEmail">
+                                <div class="input-group mb-3 col-6">
+                                    <span class="input-group-text" id="basic-addon1">@</span>
+                                    <input type="email" class="form-control" aria-label="inputEmail" aria-describedby="basic-addon1">
                                 </div>
                             </div>
 
@@ -501,7 +499,7 @@
                             </div>
                             <div class="mb-3 col-2">
                                 <label for="inputCap" class="form-label">CAP</label>
-                                <input type="text" class="form-control" id="inputCap">
+                                <input type="number" class="form-control" id="inputCap">
                             </div>
 
                             <!-- FOTO -->
