header: add dropdown bell

--- a/index.html
+++ b/index.html
@@ -51,9 +51,17 @@
                     </div>
 
 
-                    <a class="col-12 col-md-3 text-center" href="#">
-                        <i class="fa-solid fa-bell text-warning"></i>
-                    </a>
+                    <div class="dropdown col-12 col-md-3 text-center">
+                        <a class="" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-solid fa-bell text-warning"></i>
+                        </a>
+                    
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Profilo</a></li>
+                            <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                            <li><a class="dropdown-item" href="#">Logout</a></li>
+                        </ul>
+                    </div>
                 </nav>
             </div>
         </div>
