--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
                 <!-- TOP BAR -->
                 <div class="my-topBox container-fluid">
                     <div class="row text-white py-3 g-4">
-                        <div class="col-12 col-md-4 col-xl-2 d-flex order-md-last justify-content-md-end">
-                            <p class="text-white text-decoration-none text-nowrap" href="#">
+                        <div class="col-12 col-md-4 col-xl-2 d-flex order-md-last justify-content-md-end align-items-center">
+                            <p class="text-white text-decoration-none text-nowrap m-0" href="#">
                                 Nuovo Studente
                                 <button class="btn btn-outline-light ms-3"><i class="fa-solid fa-plus" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i></button>
                             </p>
                         </div>
-                        <div class="col-12 col-md-4 col-xl-5">
+                        <div class="col-12 col-md-4 col-xl-5 vstack justify-content-center">
                             <div class="d-flex align-items-baseline">
                                 <h1 class="m-0 h3">Boolean</h1>
                                 <span class="badge rounded-pill my-bgBlue ms-2">Piano blaze</span>
@@ -126,9 +126,9 @@
                                     app</span>
                             </div>
                         </div>
-                        <div class="col-12 col-md-4 col-xl-5">
+                        <div class="col-12 col-md-4 col-xl-5 vstack justify-content-center">
                             <p class="m-0">Studenti online negli ultimi 30 minuti</p>
-                            <p class="h3">125</p>
+                            <p class="h3 m-0">125</p>
                         </div>
                     </div>
                 </div>
