fix: new student button click

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="col-12 col-md-4 col-xl-2 d-flex order-md-last justify-content-md-end align-items-center">
                             <p class="text-white text-decoration-none text-nowrap m-0" href="#">
                                 Nuovo Studente
-                                <button class="btn btn-outline-light ms-3"><i class="fa-solid fa-plus" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"></i></button>
+                                <button class="btn btn-outline-light ms-3" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa-solid fa-plus"></i></button>
                             </p>
                         </div>
                         <div class="col-12 col-md-4 col-xl-5 vstack justify-content-center">
